feat(js): Adding unearthed map

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                     <label for="matSelect">Select Mat:</label>
                     <select id="matSelect">
                         <option value="blank">Blank Mat</option>
-                        <option value="2024-submerged" selected>2024 Submerged</option>
+                        <option value="2025-unearthed" selected>2025 Unearthed</option>
+                        <option value="2024-submerged">2024 Submerged</option>
                         <option value="2023-masterpiece">2023 Masterpiece</option>
                         <option value="custom">Custom URL</option>
                     </select>
