fix(js): corrected mat layout and added more mats

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
                     <label for="customMatUrl">Custom Mat URL:</label>
                     <input type="url" id="customMatUrl" placeholder="https://...">
                 </div>
+                <div class="form-group">
+                    <label for="matAlignment">Mat Alignment:</label>
+                    <select id="matAlignment">
+                        <option value="centered">Centered</option>
+                        <option value="right">Right-Aligned (Single Home)</option>
+                    </select>
+                </div>
             </section>
 
             <!-- Robot Configuration Section -->
