--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="form-group">
                     <label for="robotImageUrl">Robot Image URL (optional):</label>
-                    <input type="url" id="robotImageUrl" placeholder="https://...">
+                    <input type="url" id="robotImageUrl" value="img/DadBot.png" placeholder="https://...">
                 </div>
             </section>
 
