fix(ui): updating the title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <!-- Left Panel: Split into Subpanels with Bottom Actions (25%) -->
         <div class="left-panel">
-            <h1>Mission Planner</h1>
+            <h1>Mission Path Planner</h1>
             
             <div class="sidebar-main">
                 <!-- Left Subpanel: Configuration -->
