--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <input type="number" id="startY" value="0" step="0.1">
                         </div>
                         <div class="form-group">
-                            <label for="startAngle">Orientation (degrees, 0° = forward):</label>
+                            <label for="startAngle">Orientation (degrees, 0° = North):</label>
                             <input type="number" id="startAngle" value="0" step="1">
                         </div>
                         </div>
