--- a/index.html
+++ b/index.html
@@ -115,15 +115,15 @@
                         <h2 class="section-header">Starting Position<span class="collapse-icon">−</span></h2>
                         <div class="section-content">
                         <div class="form-group">
-                            <label for="startX">X Position (cm):</label>
-                            <input type="number" id="startX" value="33" step="0.1">
+                            <label for="startX">X Position (cm, from left edge):</label>
+                            <input type="number" id="startX" value="30" step="0.1">
                         </div>
                         <div class="form-group">
-                            <label for="startY">Y Position (cm):</label>
-                            <input type="number" id="startY" value="3.3" step="0.1">
+                            <label for="startY">Y Position (cm, from bottom edge):</label>
+                            <input type="number" id="startY" value="0" step="0.1">
                         </div>
                         <div class="form-group">
-                            <label for="startAngle">Orientation (degrees):</label>
+                            <label for="startAngle">Orientation (degrees, 0° = North):</label>
                             <input type="number" id="startAngle" value="0" step="1">
                         </div>
                         </div>
