--- a/index.html
+++ b/index.html
@@ -202,6 +202,13 @@
     </div>
 
     <!-- Scripts -->
+    <!-- Blockly core libraries -->
+    <script src="vendor/blockly/blockly_compressed.js"></script>
+    <script src="vendor/blockly/blocks_compressed.js"></script>
+    <script src="vendor/blockly/msg/en.js"></script>
+    
+    <!-- Application scripts -->
+    <script src="js/blocklyBlocks.js"></script>
     <script src="js/robot.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/blocks.js"></script>
