--- a/index.html
+++ b/index.html
@@ -137,8 +137,19 @@
                         <div class="section-content">
                         <div id="programBlocks" class="program-blocks"></div>
                         <div class="button-group">
-                            <button id="addTextBlock" class="btn btn-secondary">Add Text Block</button>
-                            <button id="addMoveBlock" class="btn btn-primary">Add Move Block</button>
+                            <button id="addMoveBlock" class="btn btn-success icon-btn" title="Add Move Block">
+                                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"/>
+                                    <path d="M12 8v8M8 12h8"/>
+                                </svg>
+                                <span class="btn-text">Move</span>
+                            </button>
+                            <button id="addTextBlock" class="btn btn-neutral icon-btn" title="Add Text Block">
+                                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke-width="2">
+                                    <path d="M4 7h16M4 12h16M4 17h10"/>
+                                </svg>
+                                <span class="btn-text">Text</span>
+                            </button>
                         </div>
                         </div>
                     </section>
@@ -146,25 +157,7 @@
                 </div>
             </div>
 
-            <!-- Bottom Actions Bar -->
-            <div class="bottom-actions-bar">
-                <div class="form-group">
-                    <label for="planDate">Plan Date:</label>
-                    <input type="date" id="planDate">
-                </div>
-                <div class="form-group">
-                    <label>
-                        <input type="checkbox" id="printRobotConfig">
-                        Include Robot Configuration in Print
-                    </label>
-                </div>
-                <div class="button-group">
-                    <button id="exportBtn" class="btn btn-primary">Export JSON</button>
-                    <button id="importBtn" class="btn btn-secondary">Import JSON</button>
-                    <button id="printBtn" class="btn btn-secondary">Print Plan</button>
-                </div>
-                <input type="file" id="importFile" accept=".json" style="display: none;">
-            </div>
+
         </div>
 
         <!-- Right Panel: Canvas (75%) -->
@@ -173,6 +166,48 @@
                 <label for="description">Description (optional):</label>
                 <textarea id="description" rows="2" placeholder="Plan description..."></textarea>
             </div>
+            
+            <!-- Plan Controls Bar -->
+            <div class="plan-controls-bar">
+                <div class="plan-date-group">
+                    <label for="planDate">Plan Date:</label>
+                    <input type="date" id="planDate">
+                </div>
+                <div class="print-config-group">
+                    <label>
+                        <input type="checkbox" id="printRobotConfig">
+                        <span class="checkbox-label">Include Robot Configuration in Print</span>
+                    </label>
+                </div>
+                <div class="plan-actions">
+                    <button id="exportBtn" class="icon-btn" title="Export Plan">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                            <polyline points="7 10 12 15 17 10"/>
+                            <line x1="12" y1="15" x2="12" y2="3"/>
+                        </svg>
+                        <span class="btn-text">Export</span>
+                    </button>
+                    <button id="importBtn" class="icon-btn" title="Import Plan">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"/>
+                            <polyline points="17 8 12 3 7 8"/>
+                            <line x1="12" y1="3" x2="12" y2="15"/>
+                        </svg>
+                        <span class="btn-text">Import</span>
+                    </button>
+                    <button id="printBtn" class="icon-btn" title="Print Plan">
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <polyline points="6 9 6 2 18 2 18 9"/>
+                            <path d="M6 18H4a2 2 0 0 1-2-2v-5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2v5a2 2 0 0 1-2 2h-2"/>
+                            <rect x="6" y="14" width="12" height="8"/>
+                        </svg>
+                        <span class="btn-text">Print</span>
+                    </button>
+                </div>
+            </div>
+            <input type="file" id="importFile" accept=".json" style="display: none;">
+            
             <canvas id="missionCanvas"></canvas>
         </div>
     </div>
